Introduce VisiblePlace; still bugs

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .bg {
   /* The image used */
-  background-image: url("/assets/map_1173.jpg");
+  background-image: url("/assets/map_1173_.jpg");
 
   width: 100%;
 
